@@ -1,3 +1,11 @@
+2022-09-05T16:21:26Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2994758635
+* notice: last 14d: unq all: 5 29
+* notice: prev accum: outdated-unq outdated-all / unq all: 288 496 / 305 526
+* notice: next accum: outdated-unq outdated-all / unq all: 289 498 / 305 527
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-08-22] / []
+
 2022-09-05T08:19:02Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2991727834
 * notice: last 14d: unq all: 5 30
